full end project - 2

--- a/index.htm
+++ b/index.htm
@@ -1467,7 +1467,7 @@ Remarketing tags may not be associated with personally identifiable information 
 				</noscript>
 				<!-- HEADER BRANDING : begin -->
 				<div class="header-branding">
-					<a href="../index.htm">
+					<a href="../index">
 						<img src="wp-content\uploads\2017\03\sugaringNYC_logo.png" width="350"
 							alt="Sugaring NYC Hair Removal &#8211; New York Hair Removal Studio">
 					</a>
@@ -1492,10 +1492,10 @@ Remarketing tags may not be associated with personally identifiable information 
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="index.htm">Главная</a></span>
+								<span><a href="index">Главная</a></span>
 							</li>
 							<li id="menu-item-3989" class="menu-item menu-item-type-custom menu-item-object-custom">
-								<span><a href="locations\index.htm">Локации</a></span>
+								<span><a href="locations\index">Локации</a></span>
 							</li>
 							<li id="	menu-item-4128"
 								class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children">
@@ -1503,13 +1503,13 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-5494"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="prices\index.htm">Цены для женщин</a></span></li>
+												href="prices\index">Цены для женщин</a></span></li>
 									<li id="menu-item-5495"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="male-sugaring-prices\index.htm">Цены для мужчин</a></span></li>
+												href="male-sugaring-prices\index">Цены для мужчин</a></span></li>
 									<li id="menu-item-5496"
 										class="menu-item menu-item-type-custom menu-item-object-custom"><span><a
-												href="yearly-unlimited-packages\index.htm">Неограниченные
+												href="yearly-unlimited-packages\index">Неограниченные
 												пакеты</a></span>
 									</li>
 								</ul>
@@ -1520,7 +1520,7 @@ Remarketing tags may not be associated with personally identifiable information 
 								<ul class="sub-menu">
 									<li id="menu-item-6596"
 										class="menu-item menu-item-type-post_type menu-item-object-page"><span><a
-												href="our-story\index.htm">Наша история</a></span></li>
+												href="our-story\index">Наша история</a></span></li>
 								</ul>
 							</li>
 						</ul>
@@ -1971,11 +1971,11 @@ Remarketing tags may not be associated with personally identifiable information 
 																			<div class="c-carousel-items">
 																				<div class="c-service m-rounded-image">
 																					<div class="service-image"><a
-																							href="brazilian-sugaring\index-1.htm"><img
+																							href="brazilian-sugaring\index-1"><img
 																								src="wp-content\uploads\2019\07\brazilianIcon.jpg"
 																								alt=""></a></div>
 																					<h3 class="service-title"><a
-																							href="brazilian-sugaring\index-1.htm">Бразильский
+																							href="brazilian-sugaring\index-1">Бразильский
 																							Шугаринг </a> </h3>
 																					<div class="service-description">
 																						Один
@@ -1985,11 +1985,11 @@ Remarketing tags may not be associated with personally identifiable information 
 																				</div>
 																				<div class="c-service m-rounded-image">
 																					<div class="service-image"><a
-																							href="body-sugaring\index-1.htm"><img
+																							href="body-sugaring\index-1"><img
 																								src="wp-content\uploads\2019\07\fullBodyIcon.jpg"
 																								alt=""></a></div>
 																					<h3 class="service-title"><a
-																							href="body-sugaring\index-1.htm">Тело
+																							href="body-sugaring\index-1">Тело
 																							Шугаринг </a> </h3>
 																					<div class="service-description">
 																						Побалуйте себя полным телом
@@ -1998,11 +1998,11 @@ Remarketing tags may not be associated with personally identifiable information 
 																				</div>
 																				<div class="c-service m-rounded-image">
 																					<div class="service-image"><a
-																							href="underarm-sugaring\index.htm"><img
+																							href="underarm-sugaring\index"><img
 																								src="wp-content\uploads\2019\07\underarmIcon.jpg"
 																								alt=""></a></div>
 																					<h3 class="service-title"><a
-																							href="underarm-sugaring\index.htm">Подмышкой
+																							href="underarm-sugaring\index">Подмышкой
 																							Шугаринг </a> </h3>
 																					<div class="service-description"> Мы
 																						сделать эпиляцию подмышками
@@ -2010,11 +2010,11 @@ Remarketing tags may not be associated with personally identifiable information 
 																				</div>
 																				<div class="c-service m-rounded-image">
 																					<div class="service-image"><a
-																							href="yearly-unlimited-packages\index.htm"><img
+																							href="yearly-unlimited-packages\index"><img
 																								src="wp-content\uploads\2019\07\unlimitedIcon.jpg"
 																								alt=""></a></div>
 																					<h3 class="service-title"><a
-																							href="yearly-unlimited-packages\index.htm">Безлимитный
+																							href="yearly-unlimited-packages\index">Безлимитный
 																							Шугаринг </a> </h3>
 																					<div class="service-description">
 																						Наслаждайтесь шугарингом так
@@ -2468,14 +2468,14 @@ Remarketing tags may not be associated with personally identifiable information 
 							<h3 class="widget-title m-secondary-font">Информация о Sugaring NYC</h3>
 							<div class="textwidget">
 								<p><span style="color: #ffffff;"><a style="color: #ffffff;"
-											href="policy\index.htm">Условия
+											href="policy\index">Условия
 											Услуга</a></span><br><span style="color: #ffffff;"> <a
-											style="color: #ffffff;" href="locations\index-1.htm">Шугаринг
+											style="color: #ffffff;" href="locations\index-1">Шугаринг
 											Локации</a></span><br><span style="color: #ffffff;"> <a
 											style="color: #ffffff;"
 											href="https://www.sugaringnycfranchise.com/">Франчайзинг
 											Информация</a><br></span><a style="color: #ffffff;"
-										href="collaborations\index.htm">Сотрудничество</a></p>
+										href="collaborations\index">Сотрудничество</a></p>
 								<h3>&nbsp;</h3>
 								<h2><a style="color: #ffffff;" href="https://www.sugaringjobs.com"><strong>Шугаринг
 											Нью-Йорк
