updated and END PROJECT????

--- a/index.htm
+++ b/index.htm
@@ -2467,8 +2467,7 @@ Remarketing tags may not be associated with personally identifiable information 
 						<div id="text-3" class="widget col-md-6 widget_text">
 							<h3 class="widget-title m-secondary-font">Информация о Sugaring NYC</h3>
 							<div class="textwidget">
-								<p><span style="color: #ffffff;"><a style="color: #ffffff;"
-											href="policy\index">Условия
+								<p><span style="color: #ffffff;"><a style="color: #ffffff;" href="policy\index">Условия
 											Услуга</a></span><br><span style="color: #ffffff;"> <a
 											style="color: #ffffff;" href="locations\index-1">Шугаринг
 											Локации</a></span><br><span style="color: #ffffff;"> <a
@@ -2718,27 +2717,6 @@ Remarketing tags may not be associated with personally identifiable information 
 							background: #ffffff !important;
 						}
 					</style>
-					<div class="edn-temp-design-wrapper edn-custom-design-wrapper">
-						<div class="edn_middle_content edn_pro_static_pattern">
-
-							<div class="edn-text-content-wrap">
-								<div class="edn_static_text">
-									<div class="edn-text-link">Sugaring NYC теперь действует по франчайзингу!
-										Заинтересованы в открытии магазина
-										в вашем городе?</div> <span class="edn-call-action-button">
-
-										<span class="edn-ca-custom">
-											<a class="edn-static-button" href="https://www.sugaringnycfranchise.com/"
-												target='_blank'>
-												<span class="edn-ca-static-button">Учить больше</span>
-											</a>
-										</span>
-									</span>
-
-								</div>
-							</div>
-						</div>
-					</div>
 				</div><!-- edn-container end -->
 				<!---------- Notification Controls ---------->
 				<!-- close if no any components found-->
