--- a/male-sugaring-prices/index.htm
+++ b/male-sugaring-prices/index.htm
@@ -733,7 +733,7 @@ Remarketing tags may not be associated with personally identifiable information 
 					<!-- HEADER MENU : begin -->
 					<nav class="header-menu">
 
-						<button class="header-menu-toggle" type="button"><i class="fa fa-bars"></i>MENU</button>
+						<button class="header-menu-toggle" type="button"><i class="fa fa-bars"></i>МЕНЮ</button>
 
 						<ul id="menu-header-items" class="main-menu menu-items clearfix">
 							<li id="menu-item-3668" class="menu-item menu-item-type-custom menu-item-object-custom">
